# twainpp

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  dsm.cpp  dsm.h  error_code.cpp  error_code.h  error_condition.cpp  error_condition.h  precompiled.h  twain++.h  types.h
src/enums/: data_group.h
test/: CMakeLists.txt
test/dsm/: CMakeLists.txt  test.cpp
